# Physical-AI-Humanoid-Robotics-Textbook

./: .gitignore  404.html  QWEN.md  README.md  docusaurus.config.js  index.html  package-lock.json  package.json  plan.md  sidebars-appendices.js  sidebars.js  sitemap.xml  tasks.md
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yaml  deploy.yml
.specify/memory/: constitution.md
.specify/templates/: spec-template.md
assets/calibration/: realsense_handeye_calib.json  unitree_g1_dynamics_2025.yaml
assets/controllers/: raise_unitree_g1_params.yaml
assets/css/: styles.366af264.css
assets/hands/: allegro_hand_right.usd  shadow_hand_left.usd  unitree_z1.usd
assets/js/: 021faf10.7c9fe7c8.js  0298e19b.808f917c.js  02a32ef5.f30cda99.js  043a264e.503b0f60.js  0937f51d.29dc1f96.js  0bba28aa.5f4ffeb5.js  0d1632a3.186e57d1.js  0e68f5d8.aef84859.js  0f52eba1.11eb40b1.js  11e34073.a1a8427a.js  12139f69.a359680a.js  14f17c2b.aeeee304.js  17896441.c3abf516.js  1df93b7f.ca199b09.js  2237.b9527b32.js  223c0731.6f4bb1fc.js  23488002.867bef49.js  272a3aa9.66d3b721.js  27ef2030.13e039a6.js  2847373c.381b4a39.js  29d426b0.25496abe.js  2a617107.748206bc.js  2cacf09c.cd60cbe9.js  2e4d48a7.4760fafc.js  314f585f.6cf271c0.js  32bb5f96.a98dd16a.js  347bee63.26c97e79.js  351fd81a.2ab82dd2.js  36b8e78b.447870f4.js  (+87 more)
docs/: intro.html  intro.mdx
src/ros2_humanoid_template/: CMakeLists.txt  package.xml
src/ros2_humanoid_template/humanoid_control/: __init__.py  joint_publisher.py  safety_node.py  utils.py
src/ros2_humanoid_template/launch/: spawn_humanoid.launch.py
(+350 files in other folders)
